--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@ body {
 }
 
 header {
-  background: #f0293e;
+  /* background: #f0293e; */
+  background: #495080;
   color: #fff;
   text-align: center;
   flex-grow: 0;
@@ -71,7 +72,9 @@ form > div > input {
 }
 
 button {
-  background: #333e5a;
+  /* background: #333e5a; */
+  background: #495080;
+
   color: #fff;
   font-size: 16px;
   padding: 0.4em;
@@ -114,7 +117,9 @@ button:hover {
   padding: 0 2em 2em;
 }
 .participant {
-  background: #333e5a;
+  /* background: #333e5a; */
+  background: #495080;
+  /* background: #335a36; */
   padding: 10px;
   border-radius: 6px;
   display: inline-block;
@@ -139,6 +144,7 @@ video {
 
 footer {
   background: #333e5a;
+  /* background: #335a36; */
   color: #fff;
   text-align: center;
   flex-grow: 0;
