adds navigator.share api

--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,14 @@ html {
 body {
   font-family: Helvetica, Arial, sans-serif;
   color: #333e5a;
+  /* color: #2f2bad; */
   min-height: 100%;
 }
 
 header {
   /* background: #f0293e; */
-  background: #495080;
+  /* background: #495080; */
+  background: #2f2bad;
   color: #fff;
   text-align: center;
   flex-grow: 0;
@@ -73,7 +75,8 @@ form > div > input {
 
 button {
   /* background: #333e5a; */
-  background: #495080;
+  /* background: #495080; */
+  background: #2f2bad;
 
   color: #fff;
   font-size: 16px;
@@ -118,8 +121,10 @@ button:hover {
 }
 .participant {
   /* background: #333e5a; */
-  background: #495080;
+  /* background: #495080; */
   /* background: #335a36; */
+  background: #2f2bad;
+
   padding: 10px;
   border-radius: 6px;
   display: inline-block;
@@ -143,8 +148,9 @@ video {
 }
 
 footer {
-  background: #333e5a;
+  /* background: #333e5a; */
   /* background: #335a36; */
+  background: #2f2bad;
   color: #fff;
   text-align: center;
   flex-grow: 0;
