--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,19 @@ button:hover {
   justify-content: space-between;
   padding: 0 2em 2em;
 }
+.modal {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .participant {
   /* background: #333e5a; */
   /* background: #495080; */
