--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,29 @@
+@font-face {
+  font-family: "RobotoMono";
+  src: url("fonts/Roboto_Mono/RobotoMono-Medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "RobotoMono";
+  src: url("fonts/Roboto_Mono/RobotoMono-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "RobotoMono";
+  src: url("fonts/Roboto_Mono/RobotoMono-Regular.ttf") format("truetype");
+  font-weight: lighter;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -10,6 +32,7 @@ html {
 
 body {
   /* font-family: Helvetica, Arial, sans-serif; */
+  font-family: 'RobotoMono', monospace;
   /* color: #333e5a; */
   /* color: #2f2bad; */
   color: black;
@@ -20,10 +43,12 @@ header {
   /* background: #f0293e; */
   /* background: #495080; */
   /* background: #2f2bad; */
-  background:black;
+  background: black;
   color: #fff;
   text-align: center;
-  flex-grow: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
   margin-bottom: 2em;
 }
 
@@ -38,13 +63,20 @@ h1 {
 
 .app {
   min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 main {
   background: #ffffff;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 form {
@@ -62,10 +94,12 @@ form > div {
   width: 100%;
   margin-bottom: 1em;
 }
+
 form > div > label {
   display: block;
   margin-bottom: 0.3em;
 }
+
 form > div > input {
   display: block;
   width: 100%;
@@ -79,45 +113,61 @@ button {
   /* background: #333e5a; */
   /* background: #495080; */
   /* background: #2f2bad; */
-  background: black;
-
+  /* background: black; */
+  background: -webkit-gradient(linear, left bottom, left top, from(black), to(#4d4d4d));
+  background: linear-gradient(0deg, black 0%, #4d4d4d 100%);
   color: #fff;
   font-size: 16px;
   padding: 0.4em;
   border-radius: 6px;
   border: 1px solid transparent;
 }
+
 button:hover {
-  filter: brightness(150%);
+  -webkit-filter: brightness(120%);
+          filter: brightness(120%);
+  -webkit-transition: .2 ease;
+  transition: .2 ease;
 }
+
 .startButton {
   width: 70px;
   height: 40px;
   font-size: 20px;
 }
+
 .splashContainer {
   margin-top: 30px;
 }
+
 .splashHeader {
-  color:black;
-  font-size: 40px;
+  color: black;
+  font-size: 30px;
 }
+
 .fas {
   color: white !important;
 }
+
 .exitLink {
   display: inline-block;
 }
+
 #exitBtn {
-  background: red;
+  /* background: red; */
+  background: -webkit-gradient(linear, left top, left bottom, from(red), to(maroon));
+  background: linear-gradient(180deg, red 0%, maroon 100%);
 }
+
 .subheader {
   margin-bottom: 10px;
   margin-top: -10px;
 }
+
 .room {
   position: relative;
 }
+
 .room button {
   /* position: absolute; */
   top: 0;
@@ -129,22 +179,31 @@ button:hover {
   top: 0;
   left: 20px;
 }
-.buttonLeave{
-  background: red;
+
+.buttonLeave {
+  /* background: #ff0000; */
+  background: -webkit-gradient(linear, left top, left bottom, from(red), to(maroon));
+  background: linear-gradient(180deg, red 0%, maroon 100%);
   margin-top: 20px;
 }
 
 .buttonGroup {
   /* display: inline-block; */
   position: relative;
+  margin: 15px;
   /* bottom: 100px; */
 }
+
 .buttonGroup button {
   padding: 10px;
   width: 45px;
   margin: 10px;
   opacity: .9;
-  background: darkslateblue;
+  /* background: #483d8b; */
+  /* background: rgb(72,61,139); */
+  /* background: linear-gradient(151deg, rgba(72,61,139,1) 35%, rgba(112,95,217,1) 100%); */
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(35%, darkslateblue), to(#705fd9));
+  background: linear-gradient(0deg, darkslateblue 35%, #705fd9 100%);
 }
 
 .room > h3 {
@@ -155,49 +214,122 @@ button:hover {
 
 .local-participant {
   text-align: center;
-  margin-bottom: 2em;
+  /* margin-bottom: 2em; */
 }
+
 .remote-participants {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   /* padding: 0 2em 2em; */
 }
+
 .participants-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .modal {
   position: fixed;
   z-index: 999;
   top: 0;
   left: 0;
-  width:100%;
+  width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
+.modal h2 {
+  font-weight: bold;
+}
+
 .modalBody {
   background-color: #fff;
+  border-radius: 6px;
 }
+
+.modal p {
+  margin: 0 25px;
+  width: 400px;
+  padding: 15px 60px;
+}
+
+.modal h3 {
+  text-align: center;
+  padding: 15px;
+  margin-right: 100px;
+  margin-bottom: -20px;
+  font-weight: normal;
+}
+
+.modalClose {
+  width: 40px;
+  margin: 15px;
+  display: inline-block;
+}
+
+.modal input {
+  display: inline-block;
+  width: 50%;
+  font-size: 16px;
+  padding: 0.4em;
+  border-radius: 6px;
+  border: 1px solid #333e5a;
+  margin: 0 auto;
+}
+
+.inviteContainer {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.inviteContainer button {
+  margin: 10px;
+}
+
 .participant {
   /* background: #333e5a; */
   /* background: #495080; */
   /* background: #335a36; */
   /* background: #2f2bad; */
   background: black;
-
+  -webkit-box-shadow: -8px 6px 5px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -8px 6px 5px -1px rgba(0, 0, 0, 0.75);
   padding: 10px;
   border-radius: 6px;
   display: inline-block;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
+
 .participant:last-child {
   margin-right: 0;
 }
+
 .participant h3 {
   text-align: center;
   padding-bottom: 0.5em;
@@ -223,10 +355,35 @@ footer {
   background: black;
   color: #fff;
   text-align: center;
-  flex-grow: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
   padding: 1em 0;
 }
 
 footer a {
   color: #fff;
 }
+
+@media only screen and (max-width: 600px) {
+  .splashContainer {
+    margin-top: 40px;
+  }
+  .splashHeader {
+    color: black;
+    font-size: 20px;
+  }
+  .startButton {
+    margin-top: 50px;
+  }
+  .participant h3 {
+    text-align: center;
+    padding-bottom: 0.5em;
+    color: #fff;
+    position: absolute;
+    font-size: 20px;
+    padding-left: 20px;
+    padding-top: 10px;
+  }
+}
+/*# sourceMappingURL=App.css.map */
