--- a/src/App.scss
+++ b/src/App.scss
@@ -126,6 +126,10 @@
     color:black;
     font-size: 30px;
   }
+  .headerLink {
+    text-decoration: none;
+    color: white;
+  }
   .fas {
     color: white !important;
   }
@@ -269,17 +273,18 @@
     padding: 10px;
     border-radius: 6px;
     display: inline-block;
+    width: 500px;
     /* margin-right: 10px; */
   }
-  .participant:last-child {
-    margin-right: 0;
-  }
+  // .participant:last-child {
+  //   // margin-right: 0;
+  // }
   .participant h3 {
     text-align: center;
     padding-bottom: 0.5em;
     color: #fff;
     position: absolute;
-    font-size: 35px;
+    font-size: 30px;
     padding-left: 50px;
     padding-top: 10px;
   }
