--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,20 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Inconsolata";
+  src: url("fonts/Inconsolata/Inconsolata-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inconsolata";
+  src: url("fonts/Inconsolata/Inconsolata-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -138,6 +152,7 @@ button:hover {
 
 .splashContainer {
   margin-top: 30px;
+  font-family: 'Inconsolata';
 }
 
 .splashHeader {
