--- a/src/App.scss
+++ b/src/App.scss
@@ -333,7 +333,7 @@
     }
     .splashHeader {
       color:black;
-      font-size: 20px;
+      // font-size: 20px;
     }
     .startButton {
       margin-top: 50px;
