--- a/src/App.scss
+++ b/src/App.scss
@@ -289,6 +289,7 @@
     border-radius: 6px;
     display: inline-block;
     width: 500px;
+    margin: 15px;
     /* margin-right: 10px; */
   }
   // .participant:last-child {
