--- a/src/App.css
+++ b/src/App.css
@@ -345,6 +345,7 @@ button:hover {
   display: inline-block;
   width: 500px;
   margin: 15px;
+  max-height: 380px;
   /* margin-right: 10px; */
 }
 
@@ -361,6 +362,7 @@ button:hover {
 video {
   width: 100%;
   max-width: 600px;
+  max-height: 350px;
   display: block;
   margin: 0 auto;
   border-radius: 6px;
